# hydra-submitit-chunked-launcher

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
example/: config.yaml  my_app.py
hydra_plugins/hydra_submitit_chunked_launcher/: chunked_launcher.py  config.py
tests/: test_submitit_chunked_launcher.py
